@@ -2,13 +2,15 @@
  % rowl - generation 1
  % Copyright (C) 2010 nineties
  %
- % $Id: proc.rl 2010-03-26 03:51:52 nineties $
+ % $Id: proc.rl 2010-03-26 06:57:55 nineties $
  %);
 
 include(stddef, code);
-export(num_physical_regs, num_normal_regs, get_reg, get_physical_reg, init_proc);
+export(init_proc, reset_proc);
+export(num_physical_regs, num_normal_regs, num_locations, num_pseudo, num_stack);
+export(get_reg, get_physical_reg, get_stack, get_arg, get_pseudo);
 export(get_eax, get_ebx, get_ecx, get_edx, get_esi, get_edi, get_ebp, get_esp);
-export(create_pseudo_reg);
+export(create_pseudo, assign_pseudo);
 export(get_register_repr);
 
 NUM_PHYSICAL_REGS => 8; (% eax, ebx, ecx, edx, esi, edi, ebp, esp %);
@@ -23,7 +25,16 @@ REG_EBP => 6;
 REG_ESP => 7;
 
 locations: NULL;
+stackregs: NULL;
+argregs: NULL;
+pseudoregs: NULL;
 location_id: 0;
+pseudo_id: 0;
+
+new_pseudo_id: () {
+    pseudo_id = pseudo_id + 1;
+    return pseudo_id - 1;
+};
 
 new_location_id: () {
     location_id = location_id + 1;
@@ -32,6 +43,9 @@ new_location_id: () {
 
 num_physical_regs: () { return NUM_PHYSICAL_REGS; };
 num_normal_regs:   () { return NUM_NORMAL_REGS; };
+num_locations: () { return vec_size(locations); };
+num_pseudo: () { return vec_size(pseudoregs); };
+num_stack: () { return vec_size(stackregs); };
 
 get_reg: (p0) {
     if (p0 >= vec_size(locations)) {
@@ -62,6 +76,44 @@ get_edi: () { return get_physical_reg(REG_EDI); };
 get_ebp: () { return get_physical_reg(REG_EBP); };
 get_esp: () { return get_physical_reg(REG_ESP); };
 
+(% p0: offset %);
+create_stack: (p0) {
+    allocate(1);
+    x0 = mktup3(OPD_STACK, new_location_id(), p0);
+    vec_pushback(locations, x0);
+    return x0;
+};
+
+(% p0: offset %);
+get_stack: (p0) {
+    allocate(1);
+    if (p0 < vec_size(stackregs)) {
+        return vec_at(stackregs, p0);
+    };
+    x0 = create_stack(p0);
+    vec_pushback(stackregs, x0);
+    return x0;
+};
+
+(% p0: offset %);
+create_arg: (p0) {
+    allocate(1);
+    x0 = mktup3(OPD_ARG, new_location_id(), p0);
+    vec_pushback(locations, x0);
+    return x0;
+};
+
+(% p0: offset %);
+get_arg: (p0) {
+    allocate(1);
+    if (p0 < vec_size(argregs)) {
+        return vec_at(argregs, p0);
+    };
+    x0 = create_arg(p0);
+    vec_pushback(argregs, x0);
+    return x0;
+};
+
 register_8_repr: ["%al", "%bl", "%cl", "dl"];
 register_32_repr: ["%eax", "%ebx", "%ecx", "%edx", "%esi", "%edi", "%ebp", "%esp"];
 (% p0: register, p1: precision %);
@@ -81,19 +133,47 @@ get_register_repr: (p0, p1) {
     exit(1);
 };
 
-create_pseudo_reg: () {
+create_pseudo: () {
     allocate(1);
-    x0 = mktup2(OPD_PSEUDO, new_location_id());
+    x0 = mktup3(OPD_PSEUDO, new_location_id(), new_pseudo_id());
     vec_pushback(locations, x0);
+    vec_pushback(pseudoregs, x0);
     return x0;
+};
+
+get_pseudo: (p0) {
+    assert(p0 < vec_size(pseudoregs));
+    return vec_at(pseudoregs, p0);
+};
+
+(% p0: pseudo register, p1: memory location %);
+assign_pseudo: (p0, p1) {
+    allocate(1);
+    x0 = p0[2]; (% pseudo-id %);
+    assert(x0 < vec_size(pseudoregs));
+    vec_put(pseudoregs, x0, NULL);
+    vec_put(locations, p0[1], p1);
 };
 
 init_proc: () {
     allocate(1);
-    locations = mkvec(NUM_PHYSICAL_REGS);
+    locations  = mkvec(NUM_PHYSICAL_REGS);
+    stackregs  = mkvec(0);
+    argregs    = mkvec(0);
+    pseudoregs = mkvec(0);
+
     x0 = 0;
     while (x0 < NUM_PHYSICAL_REGS) {
         vec_put(locations, x0, mktup3(OPD_REGISTER, new_location_id(), x0));
         x0 = x0 + 1;
     };
+};
+
+reset_proc: () {
+    stackregs  = mkvec(0);
+    argregs    = mkvec(0);
+    pseudoregs = mkvec(0);
+    vec_resize(locations, num_physical_regs());
+    location_id = num_physical_regs();
+    pseudo_id = 0;
 };
