@@ -1,8 +1,8 @@
-f: () {
-    return 100;
+f: (x,y) {
+    return x;
 };
 
 export
 main: () {
-    syscall(1, f());
+    syscall(1, f(100, 200));
 };
